--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~12.0.2",
     "@angular/platform-browser-dynamic": "~12.0.2",
     "@angular/router": "~12.0.2",
+    "@popperjs/core": "^2.11.5",
     "@types/jquery": "^3.5.14",
     "bootstrap": "^5.1.3",
     "flag-icon-css": "^4.1.7",
