--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "flag-icon-css": "^4.1.7",
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
+    "random-item": "^4.0.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
     "zone.js": "~0.11.4"
