--- a/package.json
+++ b/package.json
@@ -21,13 +21,19 @@
     "@angular/router": "~12.0.2",
     "@popperjs/core": "^2.11.5",
     "@types/jquery": "^3.5.14",
+    "anchor-js": "^4.3.1",
+    "angular-favicon": "^1.0.8",
     "bootstrap": "^5.1.3",
     "flag-icon-css": "^4.1.7",
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
+    "random-array-generator": "^1.0.7",
     "random-item": "^4.0.1",
+    "random-unique-subarray": "^2.1.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
+    "unique-random": "^3.0.0",
+    "unique-random-array": "^3.0.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
