--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "private": true,
   "dependencies": {
     "@agm/core": "^1.1.0",
-    "@angular/animations": "~12.0.2",
+    "@angular/animations": "^12.0.2",
+    "@angular/cdk": "^12.0.2",
     "@angular/common": "~12.0.2",
     "@angular/compiler": "~12.0.2",
     "@angular/core": "~12.0.2",
     "@angular/forms": "~12.0.2",
+    "@angular/material": "^12.0.2",
     "@angular/platform-browser": "~12.0.2",
     "@angular/platform-browser-dynamic": "~12.0.2",
     "@angular/router": "~12.0.2",
@@ -25,7 +27,9 @@
     "angular-favicon": "^1.0.8",
     "bootstrap": "^5.1.3",
     "flag-icon-css": "^4.1.7",
+    "hammerjs": "^2.0.8",
     "jquery": "^3.6.0",
+    "ng-gallery": "^6.0.1",
     "popper.js": "^1.16.1",
     "random-array-generator": "^1.0.7",
     "random-item": "^4.0.1",
