--- a/package.json
+++ b/package.json
@@ -12,15 +12,18 @@
   "dependencies": {
     "@agm/core": "^1.1.0",
     "@angular/animations": "^12.0.2",
-    "@angular/cdk": "^12.0.2",
+    "@angular/cdk": "^12.2.13",
     "@angular/common": "~12.0.2",
     "@angular/compiler": "~12.0.2",
     "@angular/core": "~12.0.2",
     "@angular/forms": "~12.0.2",
+    "@angular/localize": "~12.0.2",
     "@angular/material": "^12.0.2",
     "@angular/platform-browser": "~12.0.2",
     "@angular/platform-browser-dynamic": "~12.0.2",
     "@angular/router": "~12.0.2",
+    "@ks89/angular-modal-gallery": "^8.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^10.0.0",
     "@popperjs/core": "^2.11.5",
     "@types/jquery": "^3.5.14",
     "anchor-js": "^4.3.1",
@@ -29,6 +32,8 @@
     "flag-icon-css": "^4.1.7",
     "hammerjs": "^2.0.8",
     "jquery": "^3.6.0",
+    "lightgallery": "^2.4.0",
+    "mousetrap": "^1.6.5",
     "ng-gallery": "^6.0.1",
     "popper.js": "^1.16.1",
     "random-array-generator": "^1.0.7",
@@ -45,7 +50,9 @@
     "@angular/cli": "~12.0.2",
     "@angular/compiler-cli": "~12.0.2",
     "@types/googlemaps": "^3.43.3",
+    "@types/hammerjs": "^2.0.41",
     "@types/jasmine": "~3.6.0",
+    "@types/mousetrap": "^1.6.9",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.7.0",
     "karma": "~6.3.0",
